fix(herobanner): removed unnecessary media query affecting margin on mobile

--- a/src/components/HeroBanner/_heroBanner.scss
+++ b/src/components/HeroBanner/_heroBanner.scss
@@ -94,10 +94,6 @@
             font-size: 2.375rem;
         }
 
-        @media (max-width: 28.8125rem) { 
-            margin: 0;
-        }
-
         span {
             font-size: 1.625rem;
         }
